[package]
name = "hivemind"
version = "0.1.0"
authors = ["Collin Valley <collin.valley@gmail.com>, Drew Dowling <ddowling37@gmail.com"]
edition = "2018"
license = "MIT"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
crossbeam = "0.7.2"
rand = "0.7.2"

[dev-dependencies]
uuid = { version = "0.8", features = ["v4"] }
